# Seeed-RP2040-MIDI-interface

./: CMakeLists.txt  README.md  main.c  usb_descriptors.c
binary/: midi_adaptor.uf2
